@@ -50,7 +50,7 @@ public class CosineSimilarityMatrix {
           dotProduct = 0;
         }
         put.add(Constants.COLUMNFAMILY, Bytes.toBytes(String
-            .valueOf(i)), BytesUtil.doubleToBytes(dotProduct));
+            .valueOf(i)), Bytes.toBytes(dotProduct));
       }
 
       context.write(key, put);
